@@ -2,35 +2,29 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <parent>
+    <groupId>org.commonjava</groupId>
+    <artifactId>service-parent</artifactId>
+    <version>1-SNAPSHOT</version>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.commonjava.indy.service</groupId>
   <artifactId>indy-repository-service</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Indy :: Service :: Repository</name>
   <properties>
-    <java.version>11</java.version>
-    <quarkus.version>1.11.3.Final</quarkus.version>
-
     <cassandra.version>3.9.0</cassandra.version>
     <infinispan.version>11.0.8.Final</infinispan.version>
     <agroal.version>1.9</agroal.version>
     <atlas.version>1.1.1</atlas.version>
 
     <byteman.version>4.0.14</byteman.version>
-    <jacoco.version>0.8.4</jacoco.version>
-    <plugin.surefire.version>2.22.1</plugin.surefire.version>
     <skipTests>false</skipTests>
+    <plugin.jacoco.skip>false</plugin.jacoco.skip>
   </properties>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-bom</artifactId>
-        <version>${quarkus.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
       <dependency>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-bom</artifactId>
@@ -213,176 +207,8 @@
       <plugin>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
-        <version>${quarkus.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>build</goal>
-              <goal>generate-code</goal>
-              <goal>generate-code-tests</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <autoVersionSubmodules>true</autoVersionSubmodules>
-          <mavenExecutorId>forked-path</mavenExecutorId>
-          <useReleaseProfile>false</useReleaseProfile>
-          <arguments>-Prelease -DskipTests=true</arguments>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${plugin.surefire.version}</version>
-        <configuration>
-          <skipTests>${skipTests}</skipTests>
-          <excludedGroups>integration, function</excludedGroups>
-          <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
-          <systemPropertyVariables>
-            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-            <maven.home>${maven.home}</maven.home>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
-
     </plugins>
-
   </build>
 
-  <profiles>
-    <profile>
-      <id>run-its</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${plugin.surefire.version}</version>
-            <configuration>
-              <excludedGroups>function</excludedGroups>
-              <skipTests>${skipTests}</skipTests>
-              <!-- TODO: As jacoco always crashed the @QuarkusTest ut cases, removed ${surefireArgLine} here. Will add it back to enable jacoco test coverage support when find solution -->
-              <argLine>${surefireUtArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
-              <systemPropertyVariables>
-                <jacoco-agent.destfile>${project.build.directory}/jacoco-ut.exec</jacoco-agent.destfile>
-                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                <maven.home>${maven.home}</maven.home>
-              </systemPropertyVariables>
-            </configuration>
-            <executions>
-              <execution>
-                <id>functional-tests</id>
-                <phase>integration-test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <excludedGroups>!function</excludedGroups>
-                  <skipTests>${skipTests}</skipTests>
-                  <groups>function</groups>
-                  <argLine>${surefireFtArgLine} -Djdk.attach.allowAttachSelf=true</argLine>
-                  <systemPropertyVariables>
-                    <jacoco-agent.destfile>${project.build.directory}/jacoco-ft.exec</jacoco-agent.destfile>
-                    <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                    <maven.home>${maven.home}</maven.home>
-                  </systemPropertyVariables>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${jacoco.version}</version>
-            <executions>
-              <execution>
-                <id>prepare-agent-ut</id>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-                <configuration>
-                  <!-- Sets the VM argument line used when unit tests are run in surefire <argLine>. -->
-                  <append>true</append>
-                  <destFile>${project.build.directory}/jacoco-ut.exec</destFile>
-                  <propertyName>surefireUtArgLine</propertyName>
-                </configuration>
-              </execution>
-              <execution>
-                <id>report-ut</id>
-                <goals>
-                  <goal>report</goal>
-                </goals>
-                <configuration>
-                  <dataFile>${project.build.directory}/jacoco-ut.exec</dataFile>
-                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-                </configuration>
-              </execution>
-              <execution>
-                <id>prepare-agent-ft</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-                <configuration>
-                  <!-- Sets the VM argument line used when unit tests are run in surefire <argLine>. -->
-                  <append>true</append>
-                  <destFile>${project.build.directory}/jacoco-ft.exec</destFile>
-                  <propertyName>surefireFtArgLine</propertyName>
-                </configuration>
-              </execution>
-              <execution>
-                <id>report-ft</id>
-                <phase>post-integration-test</phase>
-                <goals>
-                  <goal>report</goal>
-                </goals>
-                <configuration>
-                  <dataFile>${project.build.directory}/jacoco-ft.exec</dataFile>
-                  <outputDirectory>${project.reporting.outputDirectory}/jacoco-ft</outputDirectory>
-                </configuration>
-              </execution>
-              <execution>
-                <id>merge-results</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>merge</goal>
-                </goals>
-                <configuration>
-                  <fileSets>
-                    <fileSet>
-                      <directory>${project.build.directory}</directory>
-                      <includes>
-                        <include>*.exec</include>
-                      </includes>
-                    </fileSet>
-                  </fileSets>
-                  <destFile>${project.build.directory}/jacoco.exec</destFile>
-                </configuration>
-              </execution>
-              <execution>
-                <id>post-merge-report</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>report</goal>
-                </goals>
-                <configuration>
-                  <dataFile>${project.build.directory}/jacoco.exec</dataFile>
-                  <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 </project>
